add slider and body content

--- a/index.html
+++ b/index.html
@@ -42,11 +42,277 @@
             </div>
         </div>
         <div id="auth-section">
-            <button type="button">SingIn</button>
-            <i class="fa fa-bars" aria-hidden="true"></i>
+            <button type="button" class="btn btn-primary">Sing In</button>
         </div>
     </div>
 </header>
+
+<!--Image Slider Start-->
+<div class="wrap">
+    <div id="arrow-left"></div>
+    <div class="slider">
+        <img src="slider/1.jpg">
+        <img src="slider/2.jpg">
+        <img src="slider/3.jpg">
+        <img src="slider/4.jpg">
+    </div>
+    <div id="arrow-right"></div>
+</div>
+<!--Image Slider Ends-->
+
+<div id="content">
+    <div class="widget">
+        <div class="widget-heading">
+            <h4>Trending Searches</h4>
+        </div>
+        <div class="widget-list">
+            <div class="widget-card">
+                <a>
+                    <div class="widget-content">
+                        <h4>Mission: Impossible - Fallout</h4>
+                        <p>Movies</p>
+                    </div>
+                </a>
+            </div>
+            <div class="widget-card">
+                <a>
+                    <div class="widget-content">
+                        <h4>Dhadak</h4>
+                        <p>Movies</p>
+                    </div>
+                </a>
+            </div>
+            <div class="widget-card">
+                <a>
+                    <div class="widget-content">
+                        <h4>Nawabzaade</h4>
+                        <p>Movies</p>
+                    </div>
+                </a>
+            </div>
+            <div class="widget-card">
+                <a>
+                    <div class="widget-content">
+                        <h4>Sanju</h4>
+                        <p>Movies</p>
+                    </div>
+                </a>
+            </div>
+            <div class="widget-card">
+                <a>
+                    <div class="widget-content">
+                        <h4>Soorma</h4>
+                        <p>Movies</p>
+                    </div>
+                </a>
+            </div>
+            <div class="widget-card">
+                <a>
+                    <div class="widget-content">
+                        <h4>Hotel Transylvania 3: A Monster Vacation</h4>
+                        <p>Movies</p>
+                    </div>
+                </a>
+            </div>
+            <div class="widget-card">
+                <a>
+                    <div class="widget-content">
+                        <h4>Saheb Biwi Aur Gangster 3</h4>
+                        <p>Movies</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+    <div id="movie-widget">
+        <div>
+            <div class="movie-widget-heading">
+                <h4>Movies</h4>
+            </div>
+            <div class="movie-widget-list">
+                <div class="movie-widget-card">
+                    <a>
+                        <div class="widget-content">
+                            <div>
+                                <img src="movies/1.jpg">
+                            </div>
+                            <div class="movie-widget-card-footer">
+                                <div>
+                                    <i class="fa fa-heart"></i> 69%
+                                </div>
+                                <div>
+                                    <h4>Dhadak</h4>
+                                    <p>UA|Drama|Hindi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="movie-widget-card">
+                    <a>
+                        <div class="widget-content">
+                            <div>
+                                <img src="movies/2.jpg">
+                            </div>
+                            <div class="movie-widget-card-footer">
+                                <div>
+                                    <i class="fa fa-heart"></i> 69%
+                                </div>
+                                <div>
+                                    <h4>Dhadak</h4>
+                                    <p>UA|Drama|Hindi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="movie-widget-card">
+                    <a>
+                        <div class="widget-content">
+                            <div>
+                                <img src="movies/3.jpg">
+                            </div>
+                            <div class="movie-widget-card-footer">
+                                <div>
+                                    <i class="fa fa-heart"></i> 69%
+                                </div>
+                                <div>
+                                    <h4>Dhadak</h4>
+                                    <p>UA|Drama|Hindi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="movie-widget-heading">
+                <h4>Events</h4>
+            </div>
+            <div class="movie-widget-list">
+                <div class="movie-widget-card">
+                    <a>
+                        <div class="widget-content">
+                            <div>
+                                <img src="movies/1.jpg">
+                            </div>
+                            <div class="movie-widget-card-footer">
+                                <div>
+                                    <i class="fa fa-heart"></i> 69%
+                                </div>
+                                <div>
+                                    <h4>Dhadak</h4>
+                                    <p>UA|Drama|Hindi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="movie-widget-card">
+                    <a>
+                        <div class="widget-content">
+                            <div>
+                                <img src="movies/2.jpg">
+                            </div>
+                            <div class="movie-widget-card-footer">
+                                <div>
+                                    <i class="fa fa-heart"></i> 69%
+                                </div>
+                                <div>
+                                    <h4>Dhadak</h4>
+                                    <p>UA|Drama|Hindi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="movie-widget-card">
+                    <a>
+                        <div class="widget-content">
+                            <div>
+                                <img src="movies/3.jpg">
+                            </div>
+                            <div class="movie-widget-card-footer">
+                                <div>
+                                    <i class="fa fa-heart"></i> 69%
+                                </div>
+                                <div>
+                                    <h4>Dhadak</h4>
+                                    <p>UA|Drama|Hindi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+        <div>
+            <div class="movie-widget-heading">
+                <h4>Plays</h4>
+            </div>
+            <div class="movie-widget-list">
+                <div class="movie-widget-card">
+                    <a>
+                        <div class="widget-content">
+                            <div>
+                                <img src="movies/1.jpg">
+                            </div>
+                            <div class="movie-widget-card-footer">
+                                <div>
+                                    <i class="fa fa-heart"></i> 69%
+                                </div>
+                                <div>
+                                    <h4>Dhadak</h4>
+                                    <p>UA|Drama|Hindi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="movie-widget-card">
+                    <a>
+                        <div class="widget-content">
+                            <div>
+                                <img src="movies/2.jpg">
+                            </div>
+                            <div class="movie-widget-card-footer">
+                                <div>
+                                    <i class="fa fa-heart"></i> 69%
+                                </div>
+                                <div>
+                                    <h4>Dhadak</h4>
+                                    <p>UA|Drama|Hindi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="movie-widget-card">
+                    <a>
+                        <div class="widget-content">
+                            <div>
+                                <img src="movies/3.jpg">
+                            </div>
+                            <div class="movie-widget-card-footer">
+                                <div>
+                                    <i class="fa fa-heart"></i> 69%
+                                </div>
+                                <div>
+                                    <h4>Dhadak</h4>
+                                    <p>UA|Drama|Hindi</p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 </body>
 <script type="text/javascript" src="js/main.js"></script>
 </html>
