add mobile header

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 <div id="overlay"></div>
 <!--Overlay Ends-->
 
+<div id="mobile-header">
+    <div><i class="fa fa-home" aria-hidden="true"></i></div>
+    <div><i class="fa fa-search" aria-hidden="true"></i></div>
+    <div><i class="fa fa-headphones" aria-hidden="true"></i></div>
+    <div><i class="fa fa-fire" aria-hidden="true"></i></div>
+    <div><i class="fa fa-bars" aria-hidden="true"></i></div>
+</div>
+
 <!--Aside Start-->
 <div id="user-menu">
     <div id="menu-heading">
