fix minor issues

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div><i class="fa fa-search" aria-hidden="true"></i></div>
     <div><i class="fa fa-headphones" aria-hidden="true"></i></div>
     <div><i class="fa fa-fire" aria-hidden="true"></i></div>
-    <div><i class="fa fa-bars" aria-hidden="true"></i></div>
+    <div id="toggle"><i class="fa fa-bars" aria-hidden="true"></i></div>
 </div>
 
 <!--Aside Start-->
