--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
           type="text/css">
+
     <link rel="stylesheet" href="css/main.css" type="text/css">
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <![endif]-->
 </head>
 <body>
 
-<!--Overlay Start-->
-<div id="overlay"></div>
-<!--Overlay Ends-->
 
 <div id="mobile-header">
     <div><i class="fa fa-home" aria-hidden="true"></i></div>
     <div><i class="fa fa-search" aria-hidden="true"></i></div>
     <div><i class="fa fa-headphones" aria-hidden="true"></i></div>
     <div><i class="fa fa-fire" aria-hidden="true"></i></div>
-    <div id="toggle"><i class="fa fa-bars" aria-hidden="true"></i></div>
+    <div class="toggle"><i class="fa fa-bars" aria-hidden="true"></i></div>
 </div>
+
+<!--Overlay Start-->
+<div id="overlay"></div>
+<!--Overlay Ends-->
 
 <!--Aside Start-->
 <div id="user-menu">
@@ -103,7 +108,7 @@
     </div>
     <div id="auth-section">
         <button type="button" class="btn btn-primary">Sing In</button>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="-1 -1 22 16" id="toggle" width="15%">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="-1 -1 22 16" class="toggle" width="15%">
             <g fill="none" fill-rule="evenodd">
                 <path fill-opacity="0" fill="#D8D8D8" d="M-2-5h24v24H-2z"></path>
                 <g fill="#80848F">
@@ -129,7 +134,6 @@
     <div id="arrow-right"></div>
 </div>
 <!--Image Slider Ends-->
-
 
 <!--Content Start-->
 <div id="content">
@@ -384,10 +388,8 @@
 </div>
 <!--Content Ends-->
 
-
 <!--Footer Ends-->
 <div id="footer">
-
 </div>
 <!--Footer Ends-->
 
